crates/ddlog-syntax/tests/validation/fail/too_many_attribute_commas.dl
// kind:item validate:true pass:false ignore:false file:'ddlog-syntax/src/validation/extra_commas.rs' line:43 column:3
#[foo = bar,, bar = baz]
fn foo() {}
